// Sample protos for exemplar testing

syntax = "proto3";

package exemplar;

option go_package = "foxygo.at/jig/pb/exemplar";

import "google/protobuf/any.proto";
import "google/protobuf/api.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/source_context.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/type.proto";
import "google/protobuf/wrappers.proto";

service Exemplar {
  rpc Sample(SampleRequest) returns (SampleResponse);
  rpc WellKnown(SampleRequest) returns (WellKnownSample);
}

message SampleRequest {
  string name = 1;
}

// A response that contains all types of values to see what form each takes
// in a JSON/jsonnet message.
message SampleResponse {
  // Basic types
  bool a_bool = 1;

  int32    a_int32 = 2;
  sint32   a_sint32 = 3;
  sfixed32 a_sfixed32 = 4;
  uint32   a_uint32 = 5;
  fixed32  a_fixed32 = 6;

  int64    a_int64 = 7;
  sint64   a_sint64 = 8;
  sfixed64 a_sfixed64 = 9;
  uint64   a_uint64 = 10;
  fixed64  a_fixed64 = 11;

  float  a_float = 12;
  double a_double = 13;

  string a_string = 14;
  bytes  a_bytes = 15;

  // Enum
  enum SampleEnum {
    SAMPLE_ENUM_UNSPECIFIED = 0;
    SAMPLE_ENUM_FIRST = 1;
    SAMPLE_ENUM_SECOND = 2;
  }
  SampleEnum a_enum = 16;

  // Message
  message SampleMessage1 {
    string field = 1;
    repeated int32 repeat = 2;
  }

  message SampleMessage2 {
    // buf:lint:ignore FIELD_LOWER_SNAKE_CASE
    string weird_FieldName_1_ = 1;
    repeated string a_string_list = 2;
    repeated SampleMessage1 a_msg_list = 3;
  }

  SampleMessage1 a_message = 17;

  // Maps
  map<string, bool> a_map = 18;
  map<string, SampleMessage2> a_deep_map = 19;

  // Repeated
  repeated int32 a_int_list = 20;
  repeated SampleEnum a_enum_list = 21;
  repeated SampleMessage1 a_message_list = 22;

  // Oneof
  oneof a_oneof {
    string a_string_oneof = 23;
    SampleEnum a_enum_oneof = 24;
    SampleMessage1 a_message_oneof = 25;
  }
}

message WellKnownSample {
  google.protobuf.Any any = 1;
  google.protobuf.Api api = 2;
  google.protobuf.BoolValue bool_value = 3;
  google.protobuf.BytesValue bytes_value = 4;
  google.protobuf.DoubleValue double_value = 5;
  google.protobuf.Duration duration = 6;
  google.protobuf.Empty empty = 7;
  google.protobuf.Enum an_enum = 8;
  google.protobuf.EnumValue enum_value = 9;
  google.protobuf.Field field = 10;
  google.protobuf.FieldMask field_mask = 11;
  google.protobuf.FloatValue float_value = 12;
  google.protobuf.Int32Value int32_value = 13;
  google.protobuf.Int64Value int64_value = 14;
  google.protobuf.ListValue list_value = 15;
  google.protobuf.Method method = 16;
  google.protobuf.Mixin mixin = 17;
  google.protobuf.NullValue null_value = 18;
  google.protobuf.Option an_option = 19;
  google.protobuf.SourceContext source_context = 20;
  google.protobuf.StringValue string_value = 21;
  google.protobuf.Struct struct = 22;
  google.protobuf.Timestamp timestamp = 23;
  google.protobuf.Type type = 24;
  google.protobuf.UInt32Value uint32_value = 25;
  google.protobuf.UInt64Value uint64_value = 26;
  google.protobuf.Value value = 27;
}
